--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">MyTestApp</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_add_note">AddNoteActivity</string>
+    <string name="title_activity_add_record">AddRecordActivity</string>
 </resources>
